Updated backend URL

--- a/capture.html
+++ b/capture.html
@@ -21,7 +21,7 @@
     let video = document.getElementById('cameraFeed');
     let canvas = document.getElementById('canvas');
     let ctx = canvas.getContext('2d');
-    let serverUrl = "http://localhost:3000/upload"; // Change this when deploying
+    let serverUrl = "https://live-photo-upload.onrender.com/upload";
 
     async function startCamera() {
         try {
